2002-08-09  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Removed two lines causing zoom to stop work
	  when a non-loaded layer recently had been selected or deselected.
	  I didn't find a reason for these two lines to be there. Maybe
	  there was... Closes bug 593109.

2002-08-04  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c, src/gerbv_screen.h: Added superimposing selectable
	  function to be used when you put "layer upon layer". I call it
	  superimposing functions. Hope it's correct english.
	* man/gerbv.1.in: Minor layout changes and added part on superimposing
	  functions.
	* src/gerbv.c: Fixed GTK asserts popping up when starting gerbv
	  without any files loaded.

2002-08-01  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw.[hc], src/gerbv.c: Changed how layers are created and
	  stored to be able to be displayed on top of each other. This
	  is based on a grand idea from Dino Ghilardi.

2002-07-24  Andreas Andersson (e92_aan@e.kth.se)

	* src/drill.c: Changed the parser to catch undefined tools
	  and insert default values. It warns the user, though.
	  Fixed a slight bug in min/max coordinate finding.

2002-07-16  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Fixed bug 573016, some gerbers not drawn.
	  always do fabs on floats not abs.
	* src/gerb_image.[hc], gerber.c: Parses and stores %IN%
	  ie the image name.

2002-07-15  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c, src/gerbv_icon.h: Added application icon.

2002-07-13  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in: Added --with-gtk-config to fit FreeBSD 
	  after patch from Bruno Schwander <bruno@tinkerbox.org>.
	* example/ekf/README: Fixed bug 578583 basically saying that
	  this example shouldn't work.
	
-- Release 0.0.9 --

2002-07-06  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in: Updated version to 0.0.9.
	* man/gerbv.1.in: Updated man page with new features.

2002-07-05  Anders Eriksson  <anders@umunet.org>
